# invoice_infrence

./: .config  .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  run_app.py  test_agent.py  test_agents_2.py
notebooks/: agent.ipynb  boto3.ipynb  pydantic-ai-OCR.ipynb  pydantic-ai.ipynb
notebooks/.ipynb_checkpoints/: agent-checkpoint.ipynb
src/: application.py  create_app.py
src/blueprints/: __init__.py  process.py  signals.py
src/configs/: __init__.py  app_conf.py  db_conf.py  feature_cfg.py  feature_conf.py  invoice_app_cfg.py  middleware_cfg.py
src/core/: __init__.py  agent.py  llm.py  pdf_to_image.py  perser.py  prompts.py  utility.py
src/database/: __init__.py  base.py
src/database/models/: __init__.py  document.py  invoice.py
src/extensions/: __init__.py  base.py  db_extn.py  health_extn.py  lifespan_extn.py  loadenv_extn.py  logging_extn.py  timezone_extn.py  warning_extn.py  werkzeug_exten.py
src/service/: pdf2img.py
src/service/invoice/: service.py  utility.py
src/set_up/: db_setup.py  envvar_setup.py  health_setup.py  lifespan_setup.py  logging_setup.py  timezone_setup.py  uploads_setup.py  warning_setup.py  werkzeug_setup.py
